--- a/courses/examples/ex4_led_blink/Makefile
+++ b/courses/examples/ex4_led_blink/Makefile
@@ -26,7 +26,7 @@ DEVICE = __SAM4S16C__
 CORE = cortex-m4
 
 OUTPUT_PATH = build_makefile
-OUTPUT_NAME = ex1_basic_led
+OUTPUT_NAME = ex4_led_blink
 OUTPUT_FILE = $(OUTPUT_NAME).elf
 OUTPUT_FILE_PATH = $(OUTPUT_PATH)/$(OUTPUT_FILE)
 
@@ -50,8 +50,13 @@ LDFLAGS = -mcpu=$(CORE) -mthumb -Wl,--cref -Wl,--check-sections -Wl,--gc-section
 
 VPATH = .
 
+C_SRC += \
+ex4_led_blink.c \
+startup_sam4s.c \
+system_sam4s.c
+
 OBJS += \
-$(OUTPUT_PATH)/ex1_basic_led.o \
+$(OUTPUT_PATH)/ex4_led_blink.o \
 $(OUTPUT_PATH)/startup_sam4s.o \
 $(OUTPUT_PATH)/system_sam4s.o
 
